fix: hide scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,4 +17,14 @@ p {
   .rotate-y-180 {
     transform: rotateY(180deg);
   }
+  /* For Webkit-based browsers (Chrome, Safari and Opera) */
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* For IE, Edge and Firefox */
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
